# sbi-adaptive-network-epidemic-model

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.toml  config.yml  eda.ipynb  pyproject.toml  requirements.txt  run.sh
analysis/: 01_preliminary.ipynb  02_summary.ipynb  advanced.ipynb  config.py  main.py  plots.py  posterior_predictive_check.py  regession.py  simulate.py
analysis/sbi-logs/NPE_C/2026-04-19T16_08_11.547177/: events.out.tfevents.1776586091.Zhe-Ning—DELL.29404.0
analysis/scripts/: test_discriminatory_power.py
data/raw/: observed_stats_raw.csv
docs/: reproduce.md  simulator.md  todo.md
experiments/: reference_table.toml  rejection_01.py  rejection_01.toml  rejection_02.toml  test_set.toml
include/: common.hpp  config.hpp  distance.hpp  io.hpp  normalization.hpp  rejection.hpp  result.hpp  simulator.hpp  summary.hpp
paper/: appendix.typ  main.bib  main.typ  references.bib  refs.typ  sec_advanced_methods.typ  sec_intro.typ  sec_rejection_abc.typ  sec_summary_statistics.typ  template.typ
paper/figures/summary/: gb_feature_importances.csv  results.csv  rf_posterior_samples.npy
report/: sec_rejection_abc.typ  sec_summary_statistics.typ  template.typ
results/advanced/: npe_posterior_samples.npy  npe_posterior_summary.csv  sbc_check_stats.csv
results/preliminary/: base_posterior_samples.npy  base_posterior_summary.csv  posterior_predictive_samples.csv
results/reference_table/20260419_132306/: config.toml
results/summary/: all_posterior_samples.npy  gb_posterior_samples.npy  gb_posterior_summary.csv  pls_component_scores.csv  pls_posterior_samples.npy  rf_feature_importances.csv  rf_posterior_summary.csv
results/test_set/20260419_143612/: abc_results.csv  config.toml
src/: config.cpp  distance.cpp  io.cpp  main.cpp  main.py  normalization.cpp  rejection.cpp  simulate.cpp  simulator.cpp  simulator.py  summary.cpp  utils.py
src/abctools/: __init__.py  config.py  diagnostics.py  distance.py  normalization.py  rejection.py  summary.py
